# loaddap

./: .gitignore  ASCII-format.txt  AttributeInterface.h  COPYRIGHT  ChangeLog  ClientArray.cc  ClientArray.h  ClientByte.cc  ClientByte.h  ClientFloat32.cc  ClientFloat32.h  ClientFloat64.cc  ClientFloat64.h  ClientGrid.cc  ClientGrid.h  ClientInt16.cc  ClientInt16.h  ClientInt32.cc  ClientInt32.h  ClientSequence.cc  ClientSequence.h  ClientStr.cc  ClientStr.h  ClientStructure.cc  ClientStructure.h  ClientTypeFactory.cc  ClientTypeFactory.h  ClientUInt16.cc  ClientUInt16.h  ClientUInt32.cc  ClientUInt32.h  ClientUrl.cc  ClientUrl.h  INSTALL  INSTALL-matlab-client  LoaddodsProcessing.cc  LoaddodsProcessing.h  MLVars.c  MLVars.h  Makefile.am  (+38 more)
OSX_Resources/: Description.plist  Info.plist  InstallationCheck  InstallationCheck.strings  ReadMe.txt  Welcome.html  update_mac_package_contents.pl
VCPP/: AfterInstall.txt  BeforeInstall.txt  Makefile  README.win32.txt  config.h  config_writedap.h  conpipe.c  dependancies  loaddap.iss
VCPP/doc/: readme.txt
VCPP/sample/: readme.txt
conf/: .gitignore  acinclude.m4  matlab.m4  matlabver.m4  mexext.m4  noopts.sh
mac_osx/Resources/: ReadMe.txt  Welcome.html  Welcome.txt
osx_metapackage/: Makefile  README.pkg  ReadMe.txt  build_readme.sh
osx_metapackage/Contents/extras/: Info.plist
osx_metapackage/Contents/product_info/: Conclusion.html  Welcome.html
osx_metapackage/OPeNDAP loaddap-3.6.1/: ReadMe.First.rtf
osx_metapackage/OPeNDAP loaddap-3.6.1/OPeNDAP loaddap-3.6.1.mpkg/Contents/: Info.plist
osx_metapackage/OPeNDAP loaddap-3.6.1/OPeNDAP loaddap-3.6.1.mpkg/Contents/Resources/: package_version
osx_metapackage/OPeNDAP loaddap-3.6.1/OPeNDAP loaddap-3.6.1.mpkg/Contents/Resources/English.lproj/: Description.plist  OPeNDAP loaddap-3.6.1.info
testsuite/: .gitignore  Makefile.am  atconfig  writedap_test.at
testsuite/config/: unix.exp
testsuite/data/writedap/: coads.data  coads.data3  data.1.data3  dsp_2.data3
testsuite/data/writeval/: coads.data2  coads.data3  data.1.data  data.1.data2  data.1.data4  dsp_1.data  dsp_1.data2  dsp_1.data3  dsp_2.data2
testsuite/matlab/: attr_arrays.m  attributes1.m  attributes1.mat  attributes2.m  attributes2.mat  extend_test.mat  grid.m  grid2scalar.m  grid2scalar_data.mat  grid_data.mat  matlab_tests.m  memory_expansion.m  multi_load.m  multiple_arrays.m  multiple_arrays_data.mat  oneD_float32_array.m  oneD_float32_array_data.mat  oneD_int16_array.m  oneD_int16_array2.m  oneD_int16_array2_data.mat  oneD_int16_array3.m  oneD_int16_array3_data.mat  oneD_int16_array_data.mat  sequence.m  sequence_data.mat  test_loaddods.mat  threeD_int16_array.m  threeD_int16_array_data.mat  twoD_byte_array.m  twoD_byte_array_data.mat  twoD_int16_array.m  twoD_int16_array2.m  twoD_int16_array2_data.mat  twoD_int16_array3.m  twoD_int16_array3_data.mat  twoD_int16_array_data.mat
testsuite/matlab/old_tests/: attributes2.m  multi_load.m  twoD_byte_array.m
testsuite/writedap.1/: data.1.exp  options.1.exp  options.2.exp  options.3.exp  options.4.exp  urls.tcl
testsuite/writeval.1/: data.1.exp  options.1.exp  options.2.exp  options.3.exp  options.4.exp  urls.tcl
win32/: Makefile  config_writeval.h  conpipe.h
