
dnl -*- m4 -*-
dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Id: configure.in,v 1.1 2003/10/22 19:43:28 dan Exp $)

AC_INIT(write_val.cc)
AC_CONFIG_HEADER(config_writeval.h)
AC_CONFIG_AUX_DIR(../../../etc)

AC_PREFIX_DEFAULT("\$(DODS_ROOT)")

dnl DODS_ROOT is the fully qualified pathname to the root of the DODS
dnl subtree. 

DODS_GET_DODS_ROOT
DODS_DIRECTORY_VERSION

dnl `depend' is the command to use to generate dependencies for Makefiles.

depend=${dods_relative}etc/depend.sh
AC_SUBST(depend)

CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}

dnl Checks for programs.

AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_ISC_POSIX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_CPP
AC_PROG_INSTALL

DODS_MATLAB
DODS_GCC
DODS_PROG_GTAR
DODS_PROG_PERL

AC_CANONICAL_HOST

CXX=${CXX-g++}
AC_MSG_RESULT(Setting CXX to $CXX)
AC_SUBST(CXX)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

dnl Checks for specific libraries
AC_CHECK_LIB(pthread, pthread_testcancel, 
	[LIBS="$LIBS -lpthread"
	 AC_DEFINE(_REENTRANT)])

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror strtol)

DODS_CHECK_SIZES

DODS_WWW_LIB
DODS_COMPRESSION_LIB
DODS_RX_LIB

DODS_EFENCE

DODS_DBNEW

DODS_DEBUG_OPTION

AC_MSG_CHECKING(for linux)
if echo $host | grep ".*linux.*" >/dev/null 2>&1
then
	LINUX_HACK="-L. -lstatic-script"
	AC_MSG_RESULT([found, adding special static linking hack.])
else
	LINUX_HACK=
	AC_MSG_RESULT(nope.)
fi

AC_SUBST(LINUX_HACK)

if test $ac_cv_sizeof_long -eq 4 
then
	ARCHFLAG=-DARCH_32BIT
	AC_SUBST(ARCHFLAG)
elif test $ac_cv_sizeof_long -eq 8
then
	ARCHFLAG=-DARCH_64BIT
	AC_SUBST(ARCHFLAG)
else
	AC_MSG_ERROR(Could not determine architecture size - 32 or 64 bits)
fi

AC_OUTPUT(Makefile)

